# internal/util/httpresponse/success.go
@@ -2,6 +2,7 @@ package httpresponse
 
 import (
 	"net/http"
+	"ticket-reservation/internal/domain/entity"
 	"ticket-reservation/internal/domain/errs"
 
 	"github.com/gin-gonic/gin"
@@ -14,11 +15,25 @@ type SuccessResponse struct {
 	Metadata any    `json:"metadata,omitempty"`
 }
 
+type PaginationMetadata struct {
+	Pagination entity.Pagination `json:"pagination"`
+}
+
 // Success returns HTTP 200 with default internal success code.
 func Success(c *gin.Context, data any) {
 	successResponse := SuccessResponse{
 		Code: errsFramework.GetFullCode(errs.StatusCodeSuccess),
 		Data: data,
+	}
+	c.AbortWithStatusJSON(http.StatusOK, successResponse)
+}
+
+// SuccessWithMetadata returns HTTP 200 with data and metadata.
+func SuccessWithMetadata(c *gin.Context, data any, metadata any) {
+	successResponse := SuccessResponse{
+		Code:     errsFramework.GetFullCode(errs.StatusCodeSuccess),
+		Data:     data,
+		Metadata: metadata,
 	}
 	c.AbortWithStatusJSON(http.StatusOK, successResponse)
 }
